--- a/playground/index.html
+++ b/playground/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#000000" />
     <title>Former</title>
   </head>
-  <body class="antialiased text-gray-900 bg-gray-50">
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
