--- a/packages/playground/index.html
+++ b/packages/playground/index.html
@@ -6,7 +6,7 @@
     <title>Former Playground</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="isolate"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
